# document-assistant

./: .gitignore  dvc.yaml  enderezar.py  pyproject.toml
.dvc/: config
assets/: .gitignore  inference.dvc  json_documents.dvc
assets/templates/Abasur/: Abasur_template.json
assets/templates/Aldo/: Aldo_template.json
assets/templates/Antilur/: Antilur_template.json
assets/templates/Fernando Garcia/: Fernando Garcia_template.json
assets/templates/La Banderita/: La Banderita_template.json
assets/templates/Los Nietitos/: Los Nietitos_template.json
assets/templates/Marioni/: Marioni_template.json
assets/templates/Masula/: Masula_template.json
notebooks/: classification_bert_autogluon.ipynb  classification_classical_algorithms.ipynb  classification_resnet18.ipynb  clusters_kmeans.ipynb
pipelines/inference/: dvc.yaml
pipelines/training/: dvc.yaml
src/: azure_ocr.py  classification.py  classify_documents.py  cleaning_json.py  client_export.py  client_export_utils.py  constants.py  cv_utils.py  editor_template.py  encode_dataset.py  extract_fields.py  funciones.py  inference.py  inference_utils.py  paso_1_enderezar_ocr.py  paso_2_recorte_extraccion.py  preprocess_images.py  split_dataset.py  train.py
