[tool.poetry]
name = "document-assistant"
version = "0.1.0"
description = "Document classification and extraction system"
authors = ["Nicolas Eiris <nicolas.eiris@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dvc = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
