[tool.poetry]
name = "document-assistant"
version = "0.1.0"
description = "Document classification and extraction system"
authors = ["Nicolas Eiris <nicolas.eiris@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dvc = {extras = ["gdrive"], version = "^2.9.3"}
simplejson = "^3.17.6"
pandas = "^1.4.0"
pyarrow = "^7.0.0"
fastparquet = "^0.8.0"
sklearn = "^0.0"
joblib = "^1.1.0"
azure-cognitiveservices-vision-computervision = "^0.9.0"
Pillow = "^9.0.1"
environs = "^9.5.0"
opencv-contrib-python = "^4.5.5"
pytesseract = "^0.3.9"
ipdb = "^0.13.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
